2.0.7 (2016-06-20)
---------------------------------------------
- Add configureRequest(..) method for simpler subclassing of OkHttpRequestor and OkHttp3Requestor.
- Fix BadRequest error when adding custom state to a DbxWebAuth.Request object.

2.0.6 (2016-06-20)
---------------------------------------------
- Update to latest API specs:
  - Files (DbxUserFilesRequests)
    - Add file properties endpoints.
  - Sharing (DbxUserSharingRequests)
    - Add endpoints for sharing files and managing shared file membership.
    - Change return type of removeFolderMember(..) endpoint to always be an async Job ID (LaunchEmptyResult.isAsyncJobId() will be true).
    - Add checkRemoveMemberJobStatus(..) for checking asynchronous removeFolderMember(..) requests.
      - Returns additional information compared to checkJobStatus(..)
    - Change return type of updateFolderMember(..) to return a MemberAccessLevelResult instead of void.
    - Add NO_EXPLICIT_ACCESS to UpdateFolderMemberError.
- Fix Android Fake ID exploit where app certificate chains aren't properly validated.

2.0.5 (2016-06-08)
---------------------------------------------
- Allow old locale formats for APIv2 requests.
- Fix ExceptionInInitializationError caused by CertificateParsingException when using Java 6 JREs.
- Fix CertPathValidatorException: Trust anchor for certification path not found.
- Add support for OkHttp3.
- Add support for Google App Engine with new GoogleAppEngineRequestor.
- Add support for require_role, force_reapprove, state, and disable_signup parameters in the OAuth 2 web-based authorization flow (DbxWebAuth).
- Enable certificate pinning for OkHttpRequestor and OkHttp3Requestor by default.

2.0.4 (2016-05-31)
---------------------------------------------
- Update to latest API specs:
  - Files (DbxUserFilesRequests)
    - Add saveUrl(..) saving online content to your Dropbox.
  - Shared folders (DbxUserSharingRequests)
    - Add AccessLevel.VIEWER_NO_COMMENT.